--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ html, body {
 Page de Connexion
 ==================================
 */
-.background{
+.background {
     height: 100%;
     width: 100%;
     display: flex;
@@ -26,53 +26,77 @@ Page de Connexion
     align-content: center;
 }
 
-.container{
+.container_login_register {
     height: 100%;
     width: 100%;
 }
 
-.card{
+.card_login {
     margin-top: auto;
     margin-bottom: auto;
     width: 400px;
     background-color: rgba(0,0,0,0.5);
 }
 
-.card-header h3{
+.card-header h3 {
     margin-top: 10px;
     text-align: center;
     color: white;
 }
 
-.input-group-prepend span{
+.input-group-prepend span {
     width: 50px;
     background-color: #FFC312;
     color: black;
-    border:0 !important;
+    border:0;
 }
 
-input:focus{
+input:focus {
     outline: 0 0 0 0;
     box-shadow: 0 0 0 0;
 }
 
-.login_btn{
+.login_btn {
     color: black;
     background-color: #FFC312;
     width: 100px;
 }
 
-.login_btn:hover{
+.login_btn:hover {
     color: black;
     background-color: white;
 }
 
-.links{
+.links {
     color: white;
 }
 
-.links a{
+.links a {
     margin-left: 4px;
+}
+
+
+/*
+==================================
+Footer
+==================================
+*/
+label {
+    font-size: 1.2em;
+    color: white;
+    padding-right: 10px;
+}
+
+.card_register {
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 800px;
+    background-color: rgba(0,0,0,0.5);
+}
+
+.card-footer{
+    color: white;
+    text-align: center;
 }
 
 
