--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ input:focus {
 
 /*
 ==================================
-Footer
+Inscription
 ==================================
 */
 label {
@@ -108,6 +108,11 @@ label {
     color: white;
     text-align: center;
 }
+
+.inscription .row{
+    margin-right: 0px;
+}
+
 
 
 /*
